objects/R_le__c.object
<CustomObject>
    <fields>
        <fullName>Categorie_role__c</fullName>
        <label>Catégorie rôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ambassadeur de programme</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Associations</fullName>
                </value>
                <value>
                    <fullName>CCI</fullName>
                </value>
                <value>
                    <fullName>Classement</fullName>
                </value>
                <value>
                    <fullName>Conseils d&apos;Administration</fullName>
                </value>
                <value>
                    <fullName>Diplômés</fullName>
                </value>
                <value>
                    <fullName>EML-EXEC</fullName>
                </value>
                <value>
                    <fullName>Employabilité</fullName>
                </value>
                <value>
                    <fullName>Enseignement</fullName>
                </value>
                <value>
                    <fullName>Entrepreneuriat</fullName>
                </value>
                <value>
                    <fullName>Jury</fullName>
                </value>
                <value>
                    <fullName>Partenariat et Fondation</fullName>
                </value>
                <value>
                    <fullName>Recherche</fullName>
                </value>
                <value>
                    <fullName>Stages</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R_les</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Liste_r_le__c</fullName>
        <label>Liste rôle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Categorie_role__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ancien BOURSIER EMLYON</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Astuce Lycéens</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre BDA</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre BDE</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre BDS</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Beaux Cuis&apos;</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Club Voile</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Corpo</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Déclic</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre EM&apos;icrocrédit</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Forum</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Goût&apos;R&apos;Mets</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre I LINK</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre JET</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Junior Conseil</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Ligne 2 Mire</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Numérik</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Opening</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Petit Paumé</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Planet &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Radio Activ</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Raid Hannibal</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Ski Club</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Solidari&apos;Terre</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Sup de Côteaux</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Transaction</fullName>
                </value>
                <value>
                    <fullName>Ancien Membre Verbat&apos;EM</fullName>
                </value>
                <value>
                    <fullName>Classement FT MBA</fullName>
                </value>
                <value>
                    <fullName>Club Achats Lyon</fullName>
                </value>
                <value>
                    <fullName>Club Achats Paris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_de_prescripteur_potentiel__c</fullName>
        <description>Champ technique qui indique si le Rôle EMLyon est un rôle de &quot;Prescripteur potentiel&quot;. Utilisé pour le calcul du champ roll up &quot;Rôle EML Prescripteur potentiel&quot; sur l&apos;objet Contact.</description>
        <formula>IF(
			AND(ISPICKVAL(Categorie_role__c, &quot;EML-EXEC&quot;), INCLUDES(Liste_r_le__c, &quot;Prescripteur potentiel&quot;)),
				True,
				False
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rôle de prescripteur potentiel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <label>Rôle EMLYON</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Categorie_role__c</columns>
        <columns>Liste_r_le__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>R_le_EML_Prescripteur</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Categorie_role__c</columns>
        <columns>Liste_r_le__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Categorie_role__c</field>
            <operation>contains</operation>
            <value>EML</value>
        </filters>
        <filters>
            <field>Liste_r_le__c</field>
            <operation>equals</operation>
            <value>Prescripteur</value>
        </filters>
        <label>Rôle EML : Prescripteur</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rôles EMLYON</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>